# lighthouse

./: .dockerignore  .gitignore  README.md  UX-DELIGHT.md  docker-compose.yml  pyproject.toml
.playwright-mcp/: page-2026-04-19T07-09-24-389Z.yml  page-2026-04-19T07-11-44-826Z.yml  page-2026-04-19T07-14-50-249Z.yml
docker/: api.Dockerfile  web.Dockerfile
docs/superpowers/specs/: 2026-04-19-runway-design.md
lighthouse/: analyzer.py  api.py  cli.py  crust_client.py  enricher.py  jd_matcher.py  llm.py  mcp_server.py  models.py  outreach.py  pipeline.py  query_planner.py  ranker.py  run_queue.py  thesis.py
lighthouse/prompts/: enricher.md  jd_thesis.md  outreach.md  query_planner.md  ranker.md  refine_draft.md  thesis.md
scripts/: bake_gallery.py  post-reboot.sh  redeploy.sh
surfaces/web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
surfaces/web/app/: globals.css  layout.tsx  page.tsx
surfaces/web/components/: CommandCenterStrip.tsx  DraftForge.tsx  FunnelViz.tsx  HowWeSearched.tsx  InputForm.tsx  JsonView.tsx  LogConsole.tsx  Logo.tsx  MissionCard.tsx  PersonCard.tsx  QueueWait.tsx  RotatingWord.tsx  RunBanner.tsx  ThemeToggle.tsx  TopNav.tsx  Tour.tsx
surfaces/web/lib/: api.ts  demo.ts  (+6 more)
tests/: test_analyzer.py  test_api.py  test_budget_llm.py  test_cli.py  test_crust_client.py  test_enricher.py  test_gallery_endpoint.py  test_jd_matcher.py  test_llm.py  test_llm_json_retry.py  test_mcp_server.py  test_models.py  test_outreach.py  test_pipeline.py  test_query_planner.py  test_queue.py  test_ranker.py  test_thesis.py
(+5 files in other folders)
