[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lighthouse"
version = "0.1.0"
description = "From git push to go-to-market. Paste a GitHub repo URL, get 5 investors + 5 design partners + 5 senior hires with warm-intro drafts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "manup-dev" }]
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
  "anthropic>=0.39",
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "python-dotenv>=1.0",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
lighthouse = "lighthouse.cli:app"
lighthouse-api = "lighthouse.api:main"
lighthouse-mcp = "lighthouse.mcp_server:main"

[tool.setuptools.packages.find]
include = ["lighthouse*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
